# starter-brain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
obsidian-plugin/: main.ts  manifest.json  package.json  tsconfig.json
obsidian-plugin/src/: constants.ts  entity-creator.ts  episode-logger.ts  frontmatter.ts  relation-browser.ts
starter_brain/: __init__.py  cli.py
starter_brain/kg/: episodes.py  graph.py  health.py  index.py  links.py  relations.py
starter_brain/mcp/: server.py
starter_brain/search/: embeddings.py  text_search.py
starter_brain/templates/: README.md.tmpl
starter_brain/templates/seeds/topics/: starter-brain.md
templates/: CLAUDE.md.tmpl  README.md.tmpl
templates/seeds/decisions/: starter-brain.md
templates/seeds/patterns/: auto-memory.md  decision-capture.md  diagram-freshness.md  session-workflow.md
templates/seeds/topics/: knowledge-capture.md
tests/: test_cli.py  test_integration.py
tests/kg/: test_episodes.py  test_graph.py  test_health.py  test_index.py  test_links.py  test_relations.py
tests/mcp/: test_mcp.py
tests/search/: test_text_search.py
